# Nmap Changelog ($Id$); -*-text-*-

o [Ncat] The --ssl-cert, --ssl-key, and --ssl-trustfile options now
  automatically turn on SSL mode. Previously they were ignored if
  --ssl was not also used. [David]

o [Nsock] Now Nsock supports pure TLSv1 and SSLv3 servers too. 
  Nsock uses SSLv23 method which sends SSLv2 hello message and can be understood 
  only by SSLv23 or SSLv2 servers but not by pure SSLv3 and TLSv1 servers.
  Intialising ssl connection with nsp_ssl_init_max_speed() in which SSL_OP_NO_SSLv2 
  option is not set causes the "wrong version number" when tried to connect a
  pure SSLv3 or TLSv1 servers.So with this change Nsock reconnects to the server by 
  setting SSL_OP_NO_SSLv2 option when a initial connection with no SSL_OP_NO_SSLv2 set is failed.  
  At present Ncat never uses SSLv2(which is intialized by nsp_ssl_init() instead of nsp_ssl_init_max_speed()) 
  for security reasons so it is not affected by this change.

  This behaviour was found in Ncat's SSL and Nmap's SSL version detection probes and has been
  reported here:
  http://seclists.org/nmap-dev/2009/q1/0319.html
  http://seclists.org/nmap-dev/2008/q2/0702.html
  More discussion on this here:
  http://seclists.org/nmap-dev/2009/q1/0330.html

o [Nsock] [Ncat] Implemented SSL over SCTP connections in client mode.
  SCTP support is now fully SSL enabled. [Daniel Roethlisberger]

o [Ncat] Implemented support for SCTP listening sockets, including SSL
  support.  Since there is no SSL support for SCTP client sockets yet,
  SSL support is not terribly useful yet. [Daniel Roethlisberger]

o [Nsock] [Ncat] Implemented basic SCTP client functionality.  Only the
  default SCTP stream is used.  This is also called TCP compatible mode.
  While it allows Ncat to be used for manually probing open SCTP ports,
  more complicated services making use of multiple streams or depending
  on specific message boundaries cannot be talked to successfully.
  [Daniel Roethlisberger]
